Fix team spacing :turtle:

--- a/css/style.css
+++ b/css/style.css
@@ -665,7 +665,7 @@ footer {
     margin-bottom: 12px; }
 
 .team {
-  padding: 108px 0 116px; }
+  padding: 108px 0 54px; }
 
 .team-wrapper {
   padding-top: 50px;
