--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -302,7 +302,7 @@
 }
 
 .team {
-  padding: 108px 0 116px;
+  padding: 108px 0 54px;
 }
 
 .team-wrapper {
